# imperal-ocr-tool

./: README.md  api_client.py  app.py  handlers.py  imperal.json  main.py  manifest.json  panels_main.py  panels_side.py  params.py  pyproject.toml  web.py
ocr_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_handlers.py
