[project]
name = "ocr-tool"
version = "2.0.0"
description = "Image-to-text extraction via Tesseract on our server. No AI tokens."
requires-python = ">=3.10"
dependencies = ["imperal-sdk>=1.5.14"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.setuptools]
py-modules = [
    "main", "app", "api_client", "params",
    "handlers", "panels_main", "panels_side",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
